Variable Names Updates & Comments
* Changed variable names for easier understanding
* Added comments
* Fixed some bugs.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!--
+This calculator uses a method of conversion used by Neil Anderson 
+in his Udemy course "Cisco CCNA 200-301 – The Complete Guide to Getting Certified"
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
